# pyML

./: .gitignore  GaussianMixtureModel.py  KMeans.py  KNearestNeighbour.py  LinearRegression.py  NaiveBayes.py  Perceptron.py  README.md  pyproject.toml  torch_gpu_test.py
dataset/: X.tsv  heart.data  house2.csv  house2_test.csv  house_test.csv  house_train.csv
mnist/: mnist.py
