[tool.poetry]
name = "ml"
version = "0.1.0"
description = "ML Library of tools"
authors = ["Vishwanath Sangale <vsangale@heartflow.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
torchvision = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
