[tool.poetry]
name = "pyML"
version = "0.1.0"
description = "Python library for ML algorithms study"
authors = ["Vishwanath Sangale"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
torchvision = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
